[package]
name = "davyjones"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.117" }
toml = { version = "0.8.14" }
clap = { version = "4.5.7" }
anyhow = { version = "1.0.83" }
time = { version = "0.3.36", features = ["serde", "parsing", "formatting"] }
log = "0.4"
url = { version = "2.5.2", features = ["serde"] }
env_logger = "0.10"
actix-web = { version = "4.8.0" }
tera = { version = "1.20.0" }

