[package]
name = "davyjones"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.137" }
toml = { version = "0.8.19" }
clap = { version = "4.5.27" }
anyhow = { version = "1.0.95" }
time = { version = "0.3.37", features = ["serde", "parsing", "formatting"] }
log = "0.4"
url = { version = "2.5.4", features = ["serde"] }
env_logger = "0.10"
actix-web = { version = "4.9.0" }
awc = { version = "3.5.1", features = ["rustls-0_23"] }
tera = { version = "1.20.0" }
rustls = { version = "0.23" }
webpki-roots = { version = "0.26" }
